v0.8.1: importer parity for v0.8 emissions, helper consolidation, nit sweep
Importer parity is the headline fix: in v0.8.0, plugins gained new
emissions (.cursor/agents/, .cursor/skills/, .cline/cline_mcp_settings.json,
.clinerules/workflows/, .windsurf/hooks.json, etc.) but the importers
were not updated. `prism init --from <tool>` on a v0.8-projected repo
silently dropped every new primitive. v0.8.1 adds matching importer
paths for all six rewritten plugins so the round-trip is symmetric.

Per-importer:
- cursor: .cursor/agents/, .cursor/skills/<dir>/SKILL.md,
  .cursor/commands/, .cursor/hooks.json (with __scope-guard__/
  wrappers filtered out as projection artifacts).
- cline: .clinerules/workflows/<n>.md (v0.8 native slash commands),
  .clinerules/hooks/<event>.json, .cline/cline_mcp_settings.json.
  Closes the silent-drop where the v0.8 plugin stopped emitting
  30-command-* in favor of workflows/ but the importer only knew the
  legacy prefix.
- gemini: .gemini/agents/, .gemini/commands/<n>.toml (extracts prompt
  body and description, reverses TOML triple-quote escaping), hooks
  block in .gemini/settings.json.
- windsurf: .windsurf/hooks.json (strips the bash '...' wrapper the
  plugin adds), .windsurf/mcp_config.json.
- copilot: .github/agents/<slug>.agent.md, .github/mcp.json, root
  .mcp.json (CLI walks cwd→git-root; project-local overrides root).
- continue: .continue/prompts/<n>.md (native invokable commands),
  .continue/permissions.yaml (translates Tool(pattern) back to
  tool:pattern).

Round-trip test expansion (internal/engine/roundtrip_v08_test.go):
six new tests seed v0.8-shape fixtures so future importer regressions
of this exact shape get caught in CI.

Helper consolidation (plugins/frontmatter.go): extracted
renderYAMLScalar and renderGlobs to replace yamlScalar (cline.go),
yamlQuote (copilot.go), and 7 inline json.Marshal sites across cursor,
continue, gemini, and windsurf. All YAML scalars now emit JSON-quoted
form (more conservative but a